--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -6,9 +6,16 @@
 /* FONT PATH
  * -------------------------- */
 
+.card-pro {
+  padding: 5px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+  border-radius: 6px;
+}
+
  /* custom */
 .stack-badge {
-  padding: 4px;
+  padding: 0 6px;
   background-color: salmon;
   color: white;
   font-size: 12px;
