--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -13,6 +13,11 @@
   border-radius: 6px;
 }
 
+.card-pro h5 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
  /* custom */
 .stack-badge {
   padding: 0 6px;
